# CW7

./: .env  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: permissions.py  urls.py  views.py
users/migrations/: 0001_initial.py
