[tool.poetry]
name = "cw7"
version = "0.1.0"
description = ""
authors = ["melcor <melcor2006@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
pillow = "^10.4.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
celery = "^5.4.0"
eventlet = "^0.36.1"
pytz = "^2024.1"
services = "^0.1.1"
requests = "^2.32.3"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
django-cors-headers = "^4.4.0"
drf-yasg = "^1.21.7"
setuptools = "^72.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
